# vins_ios_win

./: CMakeLists.txt
cmake/: FindBoostInternal.cmake  FindCeresInternal.cmake  FindGlogInternal.cmake  FindJsonInternal.cmake  FindLibZipInternal.cmake  FindOpenCVInternal.cmake  FindPangolinInternal.cmake  FindRabbitMQInternal.cmake  FindSuiteParseInternal.cmake  SetPlatformVarsInternal.cmake
config/: euroc_config.yaml  ex_calib_result.yaml  precision_check.sh
estimator/: CMakeLists.txt  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
estimator/back_end/: backend.h  edge.cpp  edge.h  eigen_types.h  loss_function.cpp  loss_function.h  vertex.cpp  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h  vertex_speedbias.h
estimator/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
estimator/feature_tracker/: feature_tracker.cpp  feature_tracker.h
estimator/include/: ChannelFloat32.h  Float32.h  Header.h  Imu.h  Odometry.h  Path.h  Point.h  Point32.h  PointCloud.h  PointStamped  Pose.h  PoseStamped.h  PoseWithCovariance.h  Quaternion.h  RosTime.h  Twist.h  TwistWithCovariance.h  Vector3.h
estimator/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
estimator/loop_closure/: DLoopDetector.h  TemplatedLoopDetector.h  demoDetector.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  loop_closure.cpp  loop_closure.h
estimator/utility/: CameraPoseVisualization.h_tmp  camera_factory.cpp  camera_factory.h  consumer.h  pinhole_camera.cpp  pinhole_camera.h  print.cpp  print.h  producer.h  tic_toc.h  utility.cpp  utility.h  visualization.cpp  visualization.h
example/: CMakeLists.txt  estimator_node.cpp  estimator_node_2.cpp
ios_player/: CMakeLists.txt
ios_player/cmake/: Info.plist
ios_player/resources/: Main.storyboard
ios_player/src/: AppDelegate.swift  Camera.swift  Motion.swift  ODOMETRY.h  ODOMETRY.mm  Odometry.swift  OdometryC.h  OdometryC.mm  SceneDelegate.swift  SwiftBridging.h  ViewController.swift
ios_player/src/vins.xcdatamodeld/: .xccurrentversion
win_player/: CMakeLists.txt  win_player.cpp  win_player.h  windows_player.cpp  windows_player.h
